Correct layout on mobile form page
module9-task1

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -2,7 +2,7 @@
 @import "../typography";
 
 .form {
-  padding-bottom: 4px;
+  padding-bottom: 27px;
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -16,7 +16,7 @@
 }
 
 .form__section {
-  padding: 25px 20px;
+  padding: 19px 20px 22px;
   border-top: 1px solid @alto-gray;
 
   @media (min-width: @tablet-width) {
@@ -361,7 +361,7 @@
       content: "";
       width: 54px;
       height: 54px;
-      margin-right: 20px;
+      margin-right: 25px;
       border-radius: 5px;
       background-color: @seashell-gray;
     }
